--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,60 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+  --font-family: "IBM Plex mono", monospace;
+  --font-size: 18px;
+  --font-line-height: 23.4px;
+  --font-weight-base: 400;
+  --font-weight-bold: 700;
+  --bg-color: #f1b2ce;
+  --bg-image: url("../images/cover-image-light.png");
+
+  --rec-visibility: hidden;
+
+  --title-color: #ffc2e6;
+  --accent-color-1024: #ff0070;
+  --accent-color: #ff8dcb;
+
+  --theme-menu-color: #353430;
+  --theme-menu-hover-color: rgba(53, 52, 63, 0.4);
+
+  --section-bg-color: #ff8dcb;
+  --section-title-color-lite: #353430;
+  --section-title-color-dark: #353430;
+
+  --link-shadow-color: #ff8dcb;
+  --article__content-color: #353430;
+
+  --decorated-zone-color: #353430;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --font-family: "IBM Plex mono", monospace;
+    --font-size: 18px;
+    --font-line-height: 23.4px;
+    --font-weight-base: 400;
+    --font-weight-bold: 700;
+    --bg-color: #f1b2ce;
+    --bg-image: url("../images/cover-image-light.png");
+
+    --rec-visibility: hidden;
+
+    --title-color: #ffc2e6;
+    --accent-color-1024: #ff0070;
+    --accent-color: #ff8dcb;
+
+    --theme-menu-color: #353430;
+    --theme-menu-hover-color: rgba(53, 52, 63, 0.4);
+
+    --section-bg-color: #ff8dcb;
+    --section-title-color-lite: #353430;
+    --section-title-color-dark: #353430;
+
+    --link-shadow-color: #ff8dcb;
+    --article__content-color: #353430;
+
+    --decorated-zone-color: #353430;
+  }
 }
