--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,29 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --font-family: "IBM Plex mono", monospace;
+  --font-size: 18px;
+  --font-line-height: 23.4px;
+  --font-weight-base: 400;
+  --font-weight-bold: 700;
+  --bg-color: #000028;
+  --bg-image: url("../images/cover-image-dark.png");
+
+  --rec-visibility: visible;
+
+  --title-color: #db00ff;
+  --accent-color-1024: #ff0070;
+  --accent-color: #ff0070;
+
+  --theme-menu-color: #ff0070;
+  --theme-menu-hover-color: rgba(255, 0, 112, 0.4);
+
+  --section-bg-color: #ff0070;
+  --section-title-color-lite: #ff0070;
+  --section-title-color-dark: #000028;
+
+  --link-shadow-color: #ff0070;
+  --article__content-color: #f1b2ce;
+  --decorated-zone-color: #ff0070;
+}
